colors list added and color mixin

--- a/src/shared/styles/mixins.scss
+++ b/src/shared/styles/mixins.scss
@@ -40,3 +40,10 @@
     }
   }
 }
+
+@mixin color($name) {
+  $colorObj: map-get($available-colors, $name);
+
+  color: map-get($colorObj, 'color');
+  opacity: map-get($colorObj, 'opacity');
+}
