headlines added. added mock file for guide

--- a/src/shared/styles/mixins.scss
+++ b/src/shared/styles/mixins.scss
@@ -47,3 +47,11 @@
   color: map-get($colorObj, 'color');
   opacity: map-get($colorObj, 'opacity');
 }
+
+@mixin font($type) {
+  $fontObj: map-get($available-fonts, $type);
+
+  color: #1f2041;
+  font-weight: map-get($fontObj, 'weight');
+  font-size: map-get($fontObj, 'size');
+}
