--- a/src/modules/Guide/view/components/GuideLayout/GuideLayout.scss
+++ b/src/modules/Guide/view/components/GuideLayout/GuideLayout.scss
@@ -1,4 +1,15 @@
 .guide-layout {
-  display: flex;
-  justify-content: center;
+  width: 100%;
+  background-color: #ffff;
+
+  &__inner {
+    margin: 0 auto;
+    max-width: 1200px;
+    width: 100%;
+  }
+
+  &__row {
+    display: flex;
+    justify-content: space-around;
+  }
 }
