--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -33,3 +33,22 @@ $available-colors: (
     opacity: 1,
   )
 );
+$available-fonts: (
+  h1: (
+    size: 24px,
+    weight: bold,
+  ),
+  h2: (
+    size: 19px,
+    weight: bold,
+  ),
+  h3: (
+    size: 12px,
+    weight: bold,
+  ),
+  p: (
+    size: 14px,
+    weight: normal
+  )
+)
+
