--- a/src/modules/shared/Submenu/Submenu.scss
+++ b/src/modules/shared/Submenu/Submenu.scss
@@ -10,14 +10,14 @@
     cursor: pointer;
 
     @include font('p');
-    @include color('darkShade50');
+    @include color('color', 'darkShade50');
 
     &:hover {
-      @include color('darkShade100');
+      @include color('color', 'darkShade100');
     }
 
     &_state_active {
-      @include color('darkShade100');
+      @include color('color', 'darkShade100');
     }
   }
 }
