--- a/src/modules/shared/Layout/Layout.scss
+++ b/src/modules/shared/Layout/Layout.scss
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 100px;
-    min-height: 77vh;
+    margin: 100px 0;
   }
 }
