--- a/src/modules/Guide/view/components/ColorsAndHeadlinesLayout/ColorsAndHeadlinesLayout.scss
+++ b/src/modules/Guide/view/components/ColorsAndHeadlinesLayout/ColorsAndHeadlinesLayout.scss
@@ -1,15 +1,25 @@
+@import '~shared/styles/mixins';
+
 .colors-and-headlines-layout {
   width: 100%;
   background-color: #ffff;
 
   &__inner {
-    margin: 0 auto;
-    max-width: 1200px;
-    width: 100%;
-  }
-
-  &__row {
     display: flex;
     justify-content: space-around;
+    margin: 0 auto;
+    max-width: 1200px;
+    width: 90%;
+
+    @include breakpoint-down('md') {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  &__column {
+    @include breakpoint-down('md') {
+      margin-bottom: 30px;
+    }
   }
 }
