--- a/src/modules/shared/Footer/Footer.scss
+++ b/src/modules/shared/Footer/Footer.scss
@@ -2,14 +2,13 @@
 
 .footer {
   display: block;
-  padding: 55px 0 0;
 
   &__inner {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
+    margin: 25px auto 20px;
     max-width: 1200px;
-    width: 100%;
+    width: 90%;
     height: 100%;
   }
 
@@ -22,19 +21,36 @@
   }
 
   &__aside {
+    flex-grow: 1;
+    margin: 30px 0;
     width: 260px;
+
+    @include breakpoint-down('sm') {
+      display: none;
+    }
   }
 
   &__navigation {
     display: flex;
     flex-grow: 1;
-    justify-content: space-between;
-    padding: 0 100px;
+    flex-basis: 450px;
+    justify-content: space-around;
+    margin: 30px 30px 0;
+
+    @include breakpoint-down('sm') {
+      margin: 30px 0 0;
+    }
   }
 
   &__links-group {
     display: flex;
     flex-direction: column;
+
+    &_mobile-invisible {
+      @include breakpoint-down('sm') {
+        display: none;
+      }
+    }
   }
 
   &__group-title {
@@ -60,6 +76,10 @@
   &__bottom {
     width: 100%;
     height: 70px;
+
+    @include breakpoint-down('sm') {
+      height: 100px;
+    }
   }
 
   &__bottom-inner {
@@ -68,8 +88,13 @@
     justify-content: space-between;
     margin: 0 auto;
     max-width: 1200px;
-    width: 100%;
+    width: 90%;
     height: 100%;
+
+    @include breakpoint-down('sm') {
+      flex-direction: column;
+      justify-content: space-around;
+    }
   }
 
   &__copyright {
