--- a/src/modules/Guide/view/components/ElementsLayout/ElementsLayout.scss
+++ b/src/modules/Guide/view/components/ElementsLayout/ElementsLayout.scss
@@ -1,3 +1,5 @@
+@import '~shared/styles/mixins';
+
 .elements-layout {
   width: 100%;
   background-color: #ffff;
@@ -19,5 +21,13 @@
 
   &__element {
     margin-bottom: 20px;
+  }
+
+  &__group-title {
+    margin-bottom: 20px;
+    text-transform: uppercase;
+
+    @include font('h3');
+    @include color('color', 'darkShade100');
   }
 }
