--- a/src/shared/view/elements/Divider/Divider.scss
+++ b/src/shared/view/elements/Divider/Divider.scss
@@ -4,6 +4,5 @@
   margin: 0;
   height: 2px;
   border: none;
-
-  @include color('backgroundColor', 'darkShade5');
+  background-color: $darkShade5;
 }
