--- a/src/shared/view/elements/Radio/Radio.scss
+++ b/src/shared/view/elements/Radio/Radio.scss
@@ -13,10 +13,10 @@
   user-select: none;
 
   &__label {
+    color: $darkShade50;
     cursor: pointer;
 
     @include font('p');
-    @include color('color', 'darkShade50');
   }
 
   &__radio {
@@ -34,10 +34,9 @@
     width: 20px;
     height: 20px;
     border: 1px solid;
+    border-color: $darkShade25;
     border-radius: 50%;
     background-color: white;
-
-    @include color('borderColor', 'darkShade25');
 
     &::after {
       position: absolute;
@@ -47,20 +46,18 @@
       width: 12px;
       height: 12px;
       border-radius: 50%;
+      background-color: $purple100;
       content: "";
-
-      @include color('backgroundColor', 'purple100');
     }
   }
 
   &__radio:checked ~ &__checkmark {
+    border-color: $purple100;
     background-color: white;
-
-    @include color('borderColor', 'purple100');
   }
 
   &:hover &__radio ~ &__checkmark {
-    @include color('borderColor', 'purple100');
+    border-color: $purple100;
   }
 
   /* Show the checkmark when checked */
