--- a/src/shared/view/elements/LikeButton/LikeButton.scss
+++ b/src/shared/view/elements/LikeButton/LikeButton.scss
@@ -4,7 +4,8 @@
 
 .like-button {
   position: relative;
-  width: 40px;
+  display: inline-block;
+  min-width: 40px;
   height: 20px;
   cursor: pointer;
   -webkit-user-select: none;
@@ -25,11 +26,12 @@
   &__content {
     display: flex;
     align-items: center;
+    padding: 0 5px;
     height: 100%;
   }
 
   &__heart {
-    margin: 0 5px;
+    margin-right: 5px;
     color: $purple100;
   }
 
