--- a/src/modules/Guide/view/components/ComponentsLayout/ComponentsLayout.scss
+++ b/src/modules/Guide/view/components/ComponentsLayout/ComponentsLayout.scss
@@ -1,11 +1,11 @@
-.elements-layout {
+.components-layout {
   width: 100%;
   background-color: #ffff;
 
   &__inner {
     margin: 0 auto;
     max-width: 1200px;
-    width: 100%;
+    width: 90%;
   }
 
   &__row {
