--- a/src/modules/Guide/view/components/ElementsLayout/ElementsLayout.scss
+++ b/src/modules/Guide/view/components/ElementsLayout/ElementsLayout.scss
@@ -10,12 +10,18 @@
     margin: 0 auto;
     max-width: 1200px;
     width: 90%;
+
+    @include breakpoint-down('md') {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__column {
     display: flex;
     flex-direction: column;
     align-items: space-between;
+    margin: 0 20px;
     width: 320px;
   }
 
