styled rc slider without settings

--- a/src/shared/view/elements/Button/Button.scss
+++ b/src/shared/view/elements/Button/Button.scss
@@ -21,7 +21,7 @@
 
   &_theme_filled {
     /* doiuse-disable */
-    background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
+    background-color: $purple100;
     color: white;
 
     /* doiuse-enable */
