--- a/src/shared/view/elements/RangeSlider/RangeSlider.scss
+++ b/src/shared/view/elements/RangeSlider/RangeSlider.scss
@@ -2,20 +2,46 @@
 
 .range-slider {
   display: block;
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 5px;
+  }
+
+  &__values {
+    color: $darkShade75;
+
+    @include font('p');
+    /* stylelint-disable */
+    line-height: 1em;
+    /* stylelint-enable */
+  }
+
+  &__title {
+    color: $darkShade100;
+    text-transform: uppercase;
+
+    @include font('h3');
+
+    /* stylelint-disable */
+    line-height: 1em;
+    /* stylelint-enable */
+  }
 }
 
 .range-slider .rc-slider-handle {
   margin-top: -4px;
   width: 12px;
   height: 12px;
-  border-color: $purple100;
+  border: solid 2px $purple100;
 
   &:focus {
     box-shadow: 0 0 3px $purple100;
   }
 
   &:hover {
-    border-color: #57c5f7;
+    border-color: $purple100;
   }
 
   &:active {
