--- a/src/shared/view/elements/Expander/Expander.scss
+++ b/src/shared/view/elements/Expander/Expander.scss
@@ -22,6 +22,7 @@
 
   &__header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     cursor: pointer;
   }
@@ -31,13 +32,5 @@
     text-transform: uppercase;
 
     @include font('h3');
-  }
-
-  &__icon {
-    transition: transform 0.5s;
-  }
-
-  &__icon_direction_reverse {
-    transform: rotate(180deg);
   }
 }
