--- a/src/shared/view/elements/Input/Input.scss
+++ b/src/shared/view/elements/Input/Input.scss
@@ -3,7 +3,7 @@
 .input {
   width: 100%;
 
-  &__label {
+  &__label-text {
     margin-bottom: 5px;
     color: $darkShade100;
     text-transform: uppercase;
@@ -41,16 +41,22 @@
     }
   }
 
-  &__inner {
+  &__label {
     position: relative;
     width: 100%;
+  }
+
+  &__input-wrapper {
+    position: relative;
+    display: flex;
+    align-items: center;
   }
 
   &__icon {
     position: absolute;
     right: 10px;
-    bottom: 5px;
     color: $darkShade25;
+    line-height: 1;
     cursor: pointer;
 
     &:hover {
