--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -44,5 +44,11 @@ $available-fonts: (
     weight: 400,
     family: Montserrat,
     lineHeight: 10px,
+  ),
+  calendar: (
+    size: 12px,
+    weight: 400,
+    family: Montserrat,
+    lineHeight: 24px,
   )
 );
