--- a/src/shared/view/elements/DatePicker/DatePicker.scss
+++ b/src/shared/view/elements/DatePicker/DatePicker.scss
@@ -1,6 +1,9 @@
 @import '~shared/styles/mixins';
 
 .date-picker {
+  padding: 15px;
+  border: 1px solid $darkShade25;
+  border-radius: 4px;
   background-color: white;
 
   &__inner {
@@ -12,5 +15,55 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
+  }
+
+  & .DayPicker-Day {
+    color: $darkShade50;
+
+    @include font('calendar');
+  }
+
+  & .DayPicker-Caption {
+    margin-bottom: 30px;
+    padding: 0;
+    color: $darkShade100;
+    text-align: center;
+
+    @include font('h2');
+  }
+
+  & .DayPicker-Month {
+    margin: 0;
+  }
+
+  & .DayPicker-Weekday {
+    color: $purple100;
+
+    @include font('h3');
+  }
+
+  & .DayPicker-Weekday,
+  & .DayPicker-Day {
+    width: 40px;
+    height: 40px;
+  }
+
+  & .DayPicker-Day--disabled {
+    color: $darkShade25;
+  }
+
+  & .DayPicker:not(.DayPicker--interactionDisabled) .DayPicker-Day:not(.DayPicker-Day--disabled):not(.DayPicker-Day--selected):not(.DayPicker-Day--outside):hover {
+    background-color: $purple100;
+    color: white;
+  }
+
+  & .DayPicker-Day--today:not(.DayPicker-Day--outside) {
+    background-color: $green100;
+    color: white;
+  }
+
+  & .DayPicker-Day--selected:not(.DayPicker-Day--disabled):not(.DayPicker-Day--outside) {
+    background-color: $purple100;
+    color: white;
   }
 }
