--- a/src/shared/styles/variables.scss
+++ b/src/shared/styles/variables.scss
@@ -4,7 +4,8 @@ $darkShade75: rgba(31, 32, 65, 0.75);
 $darkShade50: rgba(31, 32, 65, 0.5);
 $darkShade25: rgba(31, 32, 65, 0.25);
 $darkShade5: rgba(31, 32, 65, 0.05);
-$purple100: #bc9cff;
+$purple25: rgba(188, 156, 255, 0.25);
+$purple100: rgba(188, 156, 255, 1);
 $green100: #6fcf97;
 $red100: rgba(226, 0, 0, 1);
 $white: #ffff;
