--- a/src/modules/Guide/view/components/ColorsAndHeadlinesLayout/ColorsAndHeadlinesLayout.scss
+++ b/src/modules/Guide/view/components/ColorsAndHeadlinesLayout/ColorsAndHeadlinesLayout.scss
@@ -5,21 +5,13 @@
   background-color: #ffff;
 
   &__inner {
-    display: flex;
-    justify-content: space-around;
     margin: 0 auto;
     max-width: 1200px;
     width: 90%;
 
-    @include breakpoint-down('md') {
-      flex-direction: column;
-      align-items: center;
-    }
-  }
-
-  &__column {
-    @include breakpoint-down('md') {
-      margin-bottom: 30px;
-    }
+    // @include breakpoint-down('md') {
+    //   flex-direction: column;
+    //   align-items: center;
+    // }
   }
 }
