--- a/src/shared/view/elements/Pagination/Pagination.scss
+++ b/src/shared/view/elements/Pagination/Pagination.scss
@@ -46,6 +46,10 @@
   &__page {
     background-color: transparent;
 
+    &:not(&_current):not(&_disabled):hover {
+      color: $darkShade50;
+    }
+
     &_current {
       background-color: $purple100;
       color: white;
