--- a/src/modules/Guide/view/components/ColorsAndHeadlinesLayout/ColorsAndHeadlinesLayout.scss
+++ b/src/modules/Guide/view/components/ColorsAndHeadlinesLayout/ColorsAndHeadlinesLayout.scss
@@ -1,12 +1,11 @@
 @import '~shared/styles/mixins';
 
 .colors-and-headlines-layout {
+  padding: 50px 0;
   width: 100%;
   background-color: #ffff;
 
   &__inner {
-    margin: 0 auto;
-    max-width: 1200px;
-    width: 90%;
+    @include layout();
   }
 }
