--- a/src/modules/Guide/view/components/ElementsLayout/ElementsLayout.scss
+++ b/src/modules/Guide/view/components/ElementsLayout/ElementsLayout.scss
@@ -1,20 +1,20 @@
 @import '~shared/styles/mixins';
 
 .elements-layout {
+  padding: 50px 0;
   width: 100%;
   background-color: #ffff;
 
   &__inner {
     display: flex;
     justify-content: space-between;
-    margin: 0 auto;
-    max-width: 1200px;
-    width: 90%;
 
     @include breakpoint-down('md') {
       flex-direction: column;
       align-items: center;
     }
+
+    @include layout();
   }
 
   &__column {
