--- a/src/modules/shared/Footer/Footer.scss
+++ b/src/modules/shared/Footer/Footer.scss
@@ -6,10 +6,9 @@
   &__inner {
     display: flex;
     flex-wrap: wrap;
-    margin: 25px auto 20px;
-    max-width: 1200px;
-    width: 90%;
-    height: 100%;
+    padding: 25px 0 20px;
+
+    @include layout();
   }
 
   &__description {
@@ -86,15 +85,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 auto;
-    max-width: 1200px;
-    width: 90%;
     height: 100%;
 
     @include breakpoint-down('sm') {
       flex-direction: column;
       justify-content: space-around;
     }
+
+    @include layout();
   }
 
   &__copyright {
