--- a/src/modules/Main/view/components/IntroLayout/IntroLayout.scss
+++ b/src/modules/Main/view/components/IntroLayout/IntroLayout.scss
@@ -4,7 +4,7 @@
   padding: 50px 0;
   width: 100%;
   height: calc(100vh - #{$headerHeight});
-  background: url(./imgs/background.png);
+  background: url(../imgs/background.png);
 
   &__inner {
     display: flex;
