--- a/src/modules/Guide/view/components/ComponentsLayout/ComponentsLayout.scss
+++ b/src/modules/Guide/view/components/ComponentsLayout/ComponentsLayout.scss
@@ -3,7 +3,7 @@
 .components-layout {
   padding: 50px 0;
   width: 100%;
-  background-color: #e5e5e5;
+  background-color: #f4f4f4;
 
   &__inner {
     display: flex;
